# mnlite

./: .gitignore  CONTRIBUTING.md  README.adoc  README.md  pyproject.toml  scrapy.cfg  test.md  test.rst
dev/: reset_moddates.ipynb  test_jsonld.ipynb
docs/: _config.yml  _toc.yml  architecture.md  index.md  operation.md  test_dryad.ipynb  watchbuild
docs/_static/: mnlite.css
docs/diagrams/: README.md  front_pieces.drawio  mnlite_component_mnlite.puml  mnlite_component_soscan.puml  mnlite_container.puml  mnlite_context.puml  mnlite_context_min.puml
mnlite/: __init__.py  flob.py  jldextract.py  mnlite.ini  mnode.py  models.py  util.py  xmnlite.ini
mnlite/nodes/mn_1/: node.json
mnlite/static/: common.css  common.js
mnlite/templates/: error_template.xml  index.html  logrecords_template.xml  node_template.xml  objectlist_template.xml  ping_template.html  systemmetadata_template.xml
mnlite/templates/jldex/: jldex.html
mnlite/templates/mnode/: checksum_template.xml  index.html  objectlist_template.xml  systemmetadata_template.xml
mnonboard/: README.md  __init__.py  cli.py  cn.py  data_chx.py  defs.py  info_chx.py  mnonboard.py  mnutils.py  spiders.py  utils.py
mnstage/: README.md
notes/: mnlite.drawio  notes.md
opersist/: __init__.py  cli.py  flob.py  rdfutils.py  utils.py
opersist/models/: __init__.py  accessrule.py  crawlstatus.py  identifier.py  relation.py  request.py  subject.py  thing.py
scripts/: curly.py  mnonboard.py
soscan/: items.py  middlewares.py  models.py  opersistpipeline.py  pipelines.py  settings.py  settings_sitemap.py  sochecksumpipeline.py  sonormalizepipeline.py  utils.py
soscan/spiders/: jsonldspider.py  ldsitemapspider.py  rawjsonldspider.py
tests/: USAP-DC.jsonld  ds1.jsonld  eg_dryad_01.jsonld  testDDRsitemap.xml  testGEMjsonld01.html  testGEMjsonld02.html  testGEMsitemap.xml  testHDsitemap.xml  testUSAPjsonld01.html  testUSAPjsonld02.html  testUSAPsitemap.xml  test_flob.py  test_ldsitemap.py  test_mnlite.py  test_rdfutils.py
