[tool.poetry]
name = "mnlite"
version = "0.1.0"
description = "Light weight read-only DataONE member node in Python Flask"
authors = ["datadavev <datadavev@users.noreply.github.com>"]
license = "Apache 2.0"

[tool.poetry.dependencies]
python = "^3.8"
Flask = "^1.1.2"
SQLAlchemy = "^1.3.20"

[tool.poetry.dev-dependencies]
pytest = "^6.1.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
