[tool.poetry]
name = "mnlite"
version = "0.1.0"
description = "Light weight read-only DataONE member node in Python Flask"
authors = ["datadavev <datadavev@users.noreply.github.com>"]
license = "Apache 2.0"

[tool.poetry.dependencies]
python = "^3.8"
Flask = "^1.1.2"
SQLAlchemy = "^1.3.20"
dateparser = "^1.0.0"
Flask-SQLAlchemy = "^2.4.4"
click = "^7.1.2"
Flask-MonitoringDashboard = "^3.1.0"
ojson = "^0.1.0"
Scrapy = "^2.4.1"
pyld = {git = "https://github.com/datadavev/pyld.git", rev = "issue_128"}
requests = "^2.25.0"
python-magic = "^0.4.18"
alembic = "^1.4.3"

[tool.poetry.dev-dependencies]
pytest = "^6.1.2"

[tool.poetry.scripts]
opersist= "opersist.cli:main"
curly="scripts.curly:main"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
