[tool.poetry]
name = "mnlite"
version = "0.1.0"
description = "Light weight read-only DataONE member node in Python Flask"
authors = ["datadavev <datadavev@users.noreply.github.com>"]
license = "Apache 2.0"

[tool.poetry.dependencies]
python = "^3.8"
Flask = "^1.1.2"
SQLAlchemy = "^1.3.20"
dateparser = "^1.0.0"
Flask-SQLAlchemy = "^2.4.4"
click = "8.1.3"
#Flask-MonitoringDashboard = "^3.1.0"
Scrapy = "^2.4.1"
requests = "^2.25.0"
python-magic = "^0.4.18"
alembic = "^1.4.3"
"org.webpki.json" = {git = "https://github.com/datadavev/json-canonicalization.git", branch = "develop"}
scrapyd = "^1.2.1"
diskcache = "^5.2.1"
Flask-Cors = "^3.0.10"
flask_accept = "^0.0.6"
pyld = {git = "https://github.com/datadavev/pyld.git", tag = "ddv-2.1.0"}
sonormal = {path = "../sonormal", develop=true }

#pyjnius = "^1.3.0"
jinja2 = "<3.0"
markupsafe = "^2.0.1,<2.1"
itsdangerous = "^2.0.1,<2.1"
werkzeug = "^2.0.3,<2.1"
dataone-libclient = "^3.5.0"
pyshacl = "^0.22.2"
attrs = ">=21.3.0"
uwsgi = "^2.0.21"
paramiko = "^3.2.0"
scp = "^0.14.5"

[tool.poetry.dev-dependencies]
pytest = "^6.1.2"
black = {version = "^20.8b1", allow-prereleases = true}
#jupyter-book = "^0.11.1" # need to find a new option
watchdog = "^2.1.3"
argh = "^0.26.2"
sphinxcontrib-plantuml = "^0.21"
sphinxcontrib-drawio = "^0.0.13"

[tool.poetry.scripts]
mnonboard="mnonboard.cli:main"
opersist= "opersist.cli:main"
curly="scripts.curly:main"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
